@@ -11,13 +11,13 @@ from waflib import Utils, Errors, Logs
 import waflib.Node
 
 # the following 3 constants are updated on each new release (do not touch)
-HEXVERSION=0x1060200
+HEXVERSION=0x1060300
 """Constant updated on new releases"""
 
-WAFVERSION="1.6.2"
+WAFVERSION="1.6.3"
 """Constant updated on new releases"""
 
-WAFREVISION="10513"
+WAFREVISION="11001"
 """Constant updated on new releases"""
 
 ABI = 98
