@@ -11,10 +11,14 @@ NEW IN WAF 1.6.3
 * Rewrite the boost tool (waflib/extras/boost.py) #814, #454, #424
 * More fortran file extensions: .for, .FOR #867
 * Searching above the root nodes no longer raise exceptions #868
-* msvc detection fixes with non-utf8 encodings #873
+* Msvc detection fixes for non-utf8 encodings #873
 * Fixed the destdir processing on Windows #874
 * Stop changing the flags on waf -v (make the errors more visible) #875
 * Fixed the resource file compilation on Windows #876
+* Fixed the vala file installation #881
+* New system of plugins for C/C++/Fortran compilers (files named c_* in waflib/extras/)
+* New examples of interaction between Waf and existing makefiles (playground/)
+* New names for @before/@after: @before_method/@after_method
 
 NEW IN WAF 1.6.2
 ----------------
